--- a/game-dino/css/style.css
+++ b/game-dino/css/style.css
@@ -16,6 +16,32 @@ body {
   background: #fafafa;
 }
 
+p {
+  font-size: 20px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.pontuacao {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px;
+}
+
+.start {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.about p {
+  text-align: justify;
+}
+
 .dino {
   position: absolute;
   bottom: 0;
