--- a/game-dino/css/style.scss
+++ b/game-dino/css/style.scss
@@ -3,6 +3,7 @@ $primaryColor: #fafafa;
 @mixin FlexCenter{
   display: flex;
   justify-content: center;
+;
 }
 
 * {
@@ -16,6 +17,26 @@ body {
   @include FlexCenter();
   
   background: $primaryColor;
+}
+p {
+  font-size:20px;
+  margin-top:30px;
+  text-align: justify;
+}
+.pontuacao {
+  align-items: center;
+  padding: 10px;
+}
+ .start {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.about p{
+  text-align: justify;
 }
 
 .dino {
@@ -47,6 +68,7 @@ input {
   width: 100px;
   height: 100%;
 }
+
 
 @keyframes slideright {
   from {
